--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hight.ht"
     android:versionCode="1"
-    android:versionName="0.1" >
+    android:versionName="0.1">
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -18,12 +18,14 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -32,73 +34,76 @@
             android:value="AIzaSyBcHV3NlPjTGjaqDN01G8YiXcYm6p23jUU" />
 
         <activity
-            android:name="hight.ht.hvs.StartActivity"
+            android:name=".hvs.StartActivity"
             android:label="@string/app_name"
-            android:noHistory="true" >
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="hight.ht.hvs.LigawahlActivity"
-            android:label="@string/title_activity_ligawahl" >
-        </activity>
+            android:name=".hvs.LigawahlActivity"
+            android:label="@string/title_activity_ligawahl"></activity>
         <activity
-            android:name="hight.ht.hvs.LigaTabActivity"
+            android:name=".hvs.LigaTabActivity"
             android:label="@string/title_activity_liga_tab"
             android:launchMode="singleTop"
-            android:parentActivityName="hight.ht.hvs.LigawahlActivity" >
+            android:parentActivityName=".hvs.LigawahlActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".hvs.LigawahlActivity" />
         </activity>
         <activity
-            android:name="hight.ht.hvs.UpdateActivity"
+            android:name=".hvs.UpdateActivity"
             android:label="@string/title_activity_update"
-            android:parentActivityName="hight.ht.hvs.LigawahlActivity"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar" >
+            android:parentActivityName=".hvs.LigawahlActivity"
+            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".hvs.LigawahlActivity" />
         </activity>
         <activity
-            android:name="hight.ht.hvs.SpielActivity"
+            android:name=".hvs.SpielActivity"
             android:label="@string/title_activity_spiel"
-            android:parentActivityName="hight.ht.hvs.LigaTabActivity" >
+            android:parentActivityName=".hvs.LigaTabActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".hvs.LigaTabActivity" />
         </activity>
         <activity
-            android:name="hight.ht.hvs.MapActivity"
+            android:name=".hvs.MapActivity"
             android:label="@string/title_activity_map"
-            android:parentActivityName="hight.ht.hvs.LigaTabActivity" >
+            android:parentActivityName=".hvs.LigaTabActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".hvs.LigaTabActivity" />
         </activity>
-
         <activity
-            android:name="hight.ht.hvs.AboutActivity"
+            android:name=".hvs.AboutActivity"
             android:label="@string/title_activity_about"
-            android:parentActivityName="hight.ht.hvs.LigawahlActivity" >
+            android:parentActivityName=".hvs.LigawahlActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".hvs.LigawahlActivity" />
         </activity>
         <activity
-            android:name="hight.ht.hvs.SchiedsrichterActivity"
+            android:name=".hvs.SchiedsrichterActivity"
             android:label="@string/title_activity_schiedsrichter"
-            android:parentActivityName="hight.ht.hvs.SpielActivity" >
+            android:parentActivityName=".hvs.SpielActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".hvs.SpielActivity" />
         </activity>
+        <activity
+            android:name=".hvs.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".hvs.LigawahlActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="hight.ht.hvs.LigawahlActivity" />
+        </activity>
     </application>
-
-
 
 </manifest>
